# cookiecutter-cpp-python-bindings

./: README.md  cookiecutter.json
hooks/: pre_gen_project.py
{{cookiecutter.repo_name}}/: .precommit-config.yaml  CMakeLists.txt  README.md  setup.py
{{cookiecutter.repo_name}}/python/: module.cpp
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/src/: {{cookiecutter.repo_name}}.py
